new additions on first html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,52 @@
     <h1>Sümeyye Üzgör</h1>
     <p>Merhaba, ben Sümeyye Üzgör. İstanbul'da yaşıyorum. Kitap okumayı seviyorum. (Son zamanlarda çok vaktim olmasa da...) Özellikle distopik romanlar çok ilgimi çekiyor. Onlar arasında da sanırım pandemiyi en iyi anlatabilecek ve yaşadıklarımızı başkalarının gözünden görmemize yardım edebilecek olanı Körlük. Kesinlikle tavsiye ediyorum. Bu aralar da George Orwell, Boğulmamak İçin okuyorum. Şimdiden seveceğimi hissediyorum ama henüz çok başındayım. </p>
     <h2>"Körlük" hakkında</h2>
-    <p>Bir adamın yolda giderken bir anda kör olması ve başka bir adamın yardım ederken kör adamın arabasını kaçırması ile başlıyor. 
-        Daha sonra hırsız olan adam da kör oluyor. Yavaş yavaş herkes kör olmaya başlıyor. 
-        Hükümet bunun bir salgın olduğunu anlamaya başlayınca kör olanları alıp eski bir hastaneye kapatıyor.
-        İçerdekilerin, dışardakilerin ve aslında hepimizin hayatta kalma savaşı... Körlük!
+    <p>Olaylar, isimsiz bir ülkenin isimsiz bir şehrinde geçer. 
+        Zira, kişilerin kim olduğu önemsizdir. 
+        Bir gün otomobili ile ışıklarda duran isimsiz bir adam, yeşil ışığın yanmasını beklerken aniden körleşir. 
+        Ancak bu sıradan bir körlük değildir. Çünkü gözleri karanlığa değil, aydınlığa yani beyaza bürünür. 
+        Ne yapacağını şaşıran adam, doğruca hastaneye gider. Körlük maalesef bulaşıcıdır. 
+        Kendisini muayene eden doktor da bundan nasibini alır. 
+        Derken, bu hastalık tüm şehri etkisi altına almaya başlar. 
+        Hükümet ise körleşen halkı hapishaneden bozma bir yerde karantinaya alır.İşler buradan sonra değişir. 
+        Çünkü hükümet, hastalığı kontrol altına alamamaktadır. 
+        Her geçen gün artan kör sayısı, karantinadaki nüfusu artırmaktadır. 
+        Bu ise güç dengelerinde değişime neden olacaktır. Karantina bölgesinde çeteler oluşmaya başlar. 
+        Herkesten haraç kesen bu çeteler, insanları öldürmekte ve onlara tecavüz etmektedirler. 
+        Tüm bunları yakından izleyen ise doktorun karısıdır. Körlük hastalığına yakalanmayan tek kişi bu kadındır. 
+        Kocasını yalnız bırakmamak için kör taklidi yaparak hapishaneye girmiştir ve buradaki tüm vahşete 
+        tanıklık etmektedir.Bir gün, hapishanede çıkan yangın sonucu insanlar karantina bölgesinden kurtulmayı 
+        başarırlar. Artık ülkede kör olmayan kimse kalmamıştır. 
+        Yeni bir düzen yaratmalı ve bu düzene ayak uydurmayı başarmalıdırlar. Peki, ama nasıl?
     </p>
-
+    <figure>
+        <img src="https://productimages.hepsiburada.net/s/4/550/9639746994226.jpg/format:webp" />
+        <figcaption>Körlük: İçerdekilerin ve dışardakilerin savaşı...</figcaption>
+    </figure>
+    <h2>Diğer İlgi Alanlarım</h2>
+    <div>
+        <h3>Filmler</h3>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt1187043/" target="_blank">3 Idiots</a></li>
+            <li><a href="https://www.imdb.com/title/tt2361509/" target="_blank">The Intern</a></li>
+            <li><a href="https://www.imdb.com/title/tt10431500/" target="_blank">Yedinci Koğuştaki Mucize</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3>Diziler</h3>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt0108778/" target="_blank">Friends</a></li>
+            <li><a href="https://www.imdb.com/title/tt2467372/" target="_blank">Brocklyn 99</a></li>
+            <li><a href="https://www.imdb.com/title/tt1831164/" target="_blank">Leyla İle Mecnun</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3>Şarkılar</h3>
+        <ul>
+            <li><a href="https://youtu.be/H5NWcQCXquA" target="_blank">Zeynep Bastık - Şinanay</a></li>
+            <li><a href="https://youtu.be/d2SNX3bfYKw" target="_blank">Emel - Holm</a></li>
+            <li><a href="https://youtu.be/Ri7-vnrJD3k" target="_blank">Adele - Set Fire To The Rain</a></li>
+        </ul>
+    </div>
 </body>
 </html>
